prodMetadata/src/objects/Organization_related_to_Legislation__c.object
<CustomObject>
    <fields>
        <fullName>Legislation__c</fullName>
        <label>Legislation</label>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Organizations related to Legislation</relationshipLabel>
        <relationshipName>Organizations_related_to_Legislation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Advocacy Organization, Government Office, VSO</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organizations related to Legislation</relationshipLabel>
        <relationshipName>Organizations_related_to_Legislation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Organization&apos;s position on bill</description>
        <inlineHelpText>Organization&apos;s position on bill</inlineHelpText>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key Ally</fullName>
                </value>
                <value>
                    <fullName>Lean Oppose</fullName>
                </value>
                <value>
                    <fullName>Lean Support</fullName>
                </value>
                <value>
                    <fullName>On Fence</fullName>
                </value>
                <value>
                    <fullName>Oppose</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Organization related to Legislation</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Org-Legislation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizations related to Legislation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>